src/view/keyboard.scss
* {
  box-sizing: border-box;
  margin: 0;
}

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

.wrapper {
  width: 900px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  padding-bottom: 1rem;
}

textarea {
  width: 100%;
  height: 200px;
}

p {
  margin: 0;
  margin-top: 8px;
  font-family: 'Roboto', Arial, sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 14px;
}

h1 {
  margin: 10px;
  font-family: 'Roboto', Arial, sans-serif;
  font-size: 22px;
  font-weight: 700;
  line-height: 22px;
  color: crimson;
}

.keyboard {
  width: 100%;
  border: 2px solid #222;
  border-radius: 10px;
  margin-top: 1rem;
  background: #888;
  padding: 8px;
  &__row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 10px;
    &:nth-of-type(1) {
      margin-top: 0;
    }
  }
  &__button {
    width: 52px;
    height: 52px;
    color: #fff;
    text-align: center;
    background: #444;
    border-radius: 3px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.4s all;
    &:hover {
      background: crimson;
    }
    &_backspace {
      width: 104px;
    }
    &_enter {
      width: 108px;
    }
    &_tab {
      width: 65px;
    }
    &_caps-lock {
      width: 103px;
    }
    &_shift {
      width: 117px;
    }
    &_space {
      width: 400px;
    }
    &_backspace,
    &_enter,
    &_tab,
    &_caps-lock,
    &_shift,
    &_win,
    &_ctrl,
    &_alt,
    &_del,
    &_controls {
      background: #222;
    }
  }
}

span {
  font-family: 'Roboto', Arial, sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 16px;
}

